# potassium-shot-api

./: .gitignore  Cargo.toml  Dockerfile  justfile
.zed/: debug.json
client/: Cargo.toml
client/src/: lib.rs
common/: Cargo.toml
common/src/: com.rs  lib.rs  types.rs
migrations/: 0_0.1.0.sql
plugin/: Cargo.toml
plugin/src/: lib.rs
server/: Cargo.toml  test-db.sqlite
server/src/: db.rs  env.rs  main.rs  plugins.rs  prelude.rs  pswd.rs
server/src/api/: create_user.rs  delete_user.rs  get_userid_from_token.rs  is_admin.rs  login.rs  promote_user.rs
server/src/utils/: axum_error.rs  env.rs  mod.rs
src/: constants.rs  db.rs  env.rs  main.rs  prelude.rs  pswd.rs  types.rs
src/api/: create_user.rs  delete_user.rs  get_userid_from_token.rs  is_admin.rs  login.rs  mod.rs  promote_user.rs
