[package]
name = "potassium-shot-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2.workspace = true
axum = "0.8.9"
base64.workspace = true
chrono = "0.4.44"
deref-derive.workspace = true
serde.workspace = true
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.52.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zeroize.workspace = true

[dependencies.potassium-shot-common]
path = "../common"
